fix: add z-index: 2 to header

--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -7,7 +7,7 @@
 	right: 0;
 	background-color: #fff3;
 	backdrop-filter: blur(30px);
-	z-index: 1;
+	z-index: 2;
 
 	&__inner {
 		display: flex;
