--- a/styles/style.css
+++ b/styles/style.css
@@ -240,7 +240,7 @@ input:checked + .burger-button__visuals::after {
   background-color: rgba(255, 255, 255, 0.2);
   -webkit-backdrop-filter: blur(30px);
           backdrop-filter: blur(30px);
-  z-index: 1;
+  z-index: 2;
 }
 .header__inner {
   display: flex;
